# claude-usage-mac

./: CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/skills/usage-aware-ops/: SKILL.md
plugin/skills/usage-aware-ops/evals/: evals.json
plugin/skills/usage-aware-ops/references/: recipes.md
plugin/skills/usage-aware-ops/scripts/: claude-usage
src/: api.ts  cumulative.ts  format.ts  graph.ts  historyReader.ts  main.ts  refresh.ts  styles.css  usageLogger.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tasks/20260612_001_macos-port/: LESSONS.md  PLAN.md  REPORT.md
tests/: cli-smoke.sh
